[gd_scene load_steps=6 format=3 uid="uid://ght0w6vgmw1c"]

[ext_resource type="Texture2D" uid="uid://klmqtqo4cx62" path="res://assets/wrench.png" id="1_in6bg"]
[ext_resource type="Script" path="res://scripts/Weapon.gd" id="1_qa6ea"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lhpcb"]
size = Vector2(155, 23)

[sub_resource type="CircleShape2D" id="CircleShape2D_sj4yo"]
radius = 40.1123

[sub_resource type="CircleShape2D" id="CircleShape2D_x1yd2"]
radius = 44.0454

[node name="WrenchSonat" type="RigidBody2D"]
mass = 0.1
gravity_scale = 0.0
angular_damp = 15.0
script = ExtResource("1_qa6ea")

[node name="WeaponIcon" type="Sprite2D" parent="."]
z_index = 2
scale = Vector2(0.5, 0.5)
texture = ExtResource("1_in6bg")
offset = Vector2(185, -5)

[node name="BodyCollider" type="CollisionShape2D" parent="."]
position = Vector2(67.5, 2.5)
shape = SubResource("RectangleShape2D_lhpcb")

[node name="HeadCollider" type="CollisionShape2D" parent="."]
position = Vector2(171, -1)
shape = SubResource("CircleShape2D_sj4yo")
one_way_collision = true

[node name="HitTrigger" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitTrigger"]
position = Vector2(171, -3)
shape = SubResource("CircleShape2D_x1yd2")

[connection signal="area_entered" from="HitTrigger" to="." method="_on_trigger"]
